@@ -55,6 +55,14 @@ wchar_t * voikko_normalise(const wchar_t * word, size_t len);
  */
 void voikko_cset_reformat(const wchar_t * orig, size_t orig_len, wchar_t ** modified, size_t modified_len);
 
+/**
+ * Converts a wide character to lowercase equivalent. This function only converts
+ * "simple" characters that have one-to-one mapping between upper and lower case
+ * forms and the conversion is not language dependent. More or less this is a
+ * locale independent "towlower".
+ */
+wchar_t simpleLower(wchar_t input);
+
 }
 
 #endif
