@@ -18,6 +18,7 @@
 
 #include "spellchecker/suggestion/SuggestionGeneratorDeletion.hpp"
 #include "spellchecker/suggestion/SuggestionGeneratorCaseChange.hpp"
+#include "character/charset.hpp"
 #include <cwchar>
 #include <cwctype>
 
@@ -26,7 +27,7 @@ namespace libvoikko { namespace spellchecker { namespace suggestion {
 void SuggestionGeneratorDeletion::generate(voikko_options_t * voikkoOptions, SuggestionStatus * s) const {
 	wchar_t * buffer = new wchar_t[s->getWordLength()];
 	for (size_t i = 0; i < s->getWordLength() && !s->shouldAbort(); i++) {
-		if (i == 0 || towlower(s->getWord()[i]) != towlower(s->getWord()[i-1])) {
+		if (i == 0 || simpleLower(s->getWord()[i]) != simpleLower(s->getWord()[i-1])) {
 			wcsncpy(buffer, s->getWord(), i);
 			wcsncpy(buffer + i, s->getWord() + (i + 1), s->getWordLength() - i);
 			SuggestionGeneratorCaseChange::suggestForBuffer(voikkoOptions, s, buffer,
