@@ -18,6 +18,7 @@
 
 #include "spellchecker/suggestion/SuggestionGeneratorReplaceTwo.hpp"
 #include "spellchecker/suggestion/SuggestionGeneratorCaseChange.hpp"
+#include "character/charset.hpp"
 #include <cwchar>
 #include <cwctype>
 
@@ -31,7 +32,7 @@ void SuggestionGeneratorReplaceTwo::generate(voikko_options_t * voikkoOptions, S
 	size_t wlen = s->getWordLength();
 	wchar_t * buffer = new wchar_t[wlen + 1];
 	for (size_t i = 0; i < wlen; ++i) {
-		buffer[i] = towlower(s->getWord()[i]);
+		buffer[i] = simpleLower(s->getWord()[i]);
 	}
 	buffer[wlen] = L'\0';
 	
