@@ -1,3 +1,6 @@
+2010-02-11 Harri Pitkänen <hatapitk@iki.fi>
+	* Replace uses of towlower with locale independent implementation.
+
 2010-02-10 Harri Pitkänen <hatapitk@iki.fi>
 	* Add virtual destructors for Speller and Hyphenator.
 
